Fix align for flex block with min-height in IE

--- a/source/less/blocks/extra-catalog.less
+++ b/source/less/blocks/extra-catalog.less
@@ -64,11 +64,19 @@
   }
 }
 
+.extra-catalog__gift-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
 .extra-catalog__gift {
   position: relative;
 
   display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   box-sizing: border-box;
+  width: 100%;
   min-height: 289px;
   padding: 125px 50px 43px 50px;
 
@@ -100,7 +108,6 @@
 
 .extra-catalog__gift-text {
   margin: 0;
-  align-self: flex-end;
 
   font-size: 16px;
   line-height: 20px;
@@ -149,6 +156,7 @@
   }
 
   .extra-catalog__gift {
+    justify-content: center;
     min-height: 200px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -171,7 +179,6 @@
   .extra-catalog__gift-text {
     width: 180px;
     margin-left: auto;
-    align-self: center;
 
     font-size: 16px;
     line-height: 20px;
@@ -210,6 +217,7 @@
   }
 
   .extra-catalog__gift {
+    justify-content: flex-end;
     width: 245px;
     min-height: 289px;
     padding: 125px 31px 43px 31px;
@@ -229,8 +237,6 @@
   }
 
   .extra-catalog__gift-text {
-    align-self: flex-end;
-
     text-align: center;
   }
 }
